tests/snapshots/examples_fixtures/type_classes__class_matchable_effects.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/class_matchable_effects.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
