tests/snapshots/examples_fixtures/type_classes__console_logger_example.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/console_logger_example.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
