tests/snapshots/examples_fixtures/type_classes__custom_handled_tracer_example.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/custom_handled_tracer_example.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
