tests/snapshots/examples_fixtures/type_classes__eq_auditlog_example.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/eq_auditlog_example.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
