tests/snapshots/examples_fixtures/type_classes__foldable_row_poly_example.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/foldable_row_poly_example.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
